kustomize/envs/prod/labels-annotations.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: PLACEHOLDER
  labels:
    environment: prod
    compliance.tier: "<TIER_KEY>"
