kustomize/envs/prod/dns-config-patch.yaml
apiVersion: v1
kind: Pod
metadata:
  name: PLACEHOLDER
spec:
  dnsConfig:
    options:
      - name: ndots
        value: "1"
